package creational.singleton.vote;

public enum Candidate {
    JUMP, BIDEN
}
